# blog

./: .editorconfig  manage.py  pyproject.toml
.github/workflows/: linting.yaml
app/: settings.py  urls.py
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html
blog/templates/blog/post/: list.html
